2006-10-15  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/dir.c (accessible_file): New function to taste for file
	readability more strictly than just access().
	(inviewpath): Use it to avoid unreadable files (directories, in
	particular) getting into the srcfilelist, and thus hopefully fix
	SF bug #1173768.
	
2006-10-10  Neil Horman            <nhorman@tuxdriver.com>
	* src/main.c: Updated sigwinch_handler to not run in the event
	that curses is not running to avoid crash (SF bug 1574354)

2006-09-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/fscanner.l (wsnl): Expand set of allowed characters to make
	scanner more tolerant of non-Unix linebreaks (should fix SF Bug
	#1563459)

	* src/Makefile.am (CLEANFILES, dist-hook): Commented out, to
	reduce number of user reports from people without lex.

	* configure.in: Change from AC_PROG_LEX to AM_PROG_LEX.

	* src/Makefile.am (cscope_SOURCES): Added alloc.h.  Reindented.

	* src/invlib.c (invnewterm): Correct loop test to account for
	maxback being unsigned (should fix SF bug #1559495).

	* src/Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES, to quench
	an automake warning.

	* configure.in: Modernized via autoupdate.  Fixed several
	'underquoted' warnings from aclocal.  Use a more telling source
	file name in AC_CONFIG_SRCDIR.

	* configure, aclocal.m4, Makefile.in, contrib/Makefile.in,
	doc/Makefile.in, src/Makefile.in: Regenerated.

2006-08-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/find.c (findsymbol): Missed one place where s_len had to be
	initialized.
				  
	* src/main.c (tempstring): Parametrize length by new macro
	TEMPSTRING_LEN.
	(main): Check against too long -f file name.
	(main): Put explicit %s field widths into fscanf() call.
	(main): Replace some fscanf() calls by fgets().

	* src/input.c (shellpath): Limit size of strings copied from
	environment.

	* src/edit.c (editref, editall): Put explicit %s field widths into
	fscanf() calls.
